fixing fotter links and alignment

--- a/style.css
+++ b/style.css
@@ -241,12 +241,11 @@
 /* footer */ 
 .footer{
   background-color: #f7f7f7;
+  text-align: center;
 }
 
 .footer img {
   width: 75px;
   height: 45px;
-  margin-top: 10px;
-  margin-bottom: 5px;
-  margin-right: 10px;
+  padding: 5px;
 }
